Finish built in counting tool + Create and edit song using data from music services + a couple of bug fixes along the way.

--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -178,3 +178,7 @@ table.songlist
     content: url(/Content/thermometer-5.png);
     width: 10px; height: 30px;
 }
+
+.search-text {
+    max-width: none;
+}
