--- a/DanceCalc/m4d/Views/Song/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Song/Edit.cshtml
@@ -40,7 +40,7 @@
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-3.1.0.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.nouislider.full.min.js")" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
     <script>
         $(".chzn-select").chosen({ width: "500px" });
     </script>
