--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -13,6 +13,7 @@
 <h3>Logging</h3>
 <ul>
     <li>@Html.ActionLink("Log", "Index", "Log")</li>
+    <li>@Html.ActionLink("Restore From Log", "RestoreLines", "Log")</li>
 </ul>
 
 <h3> Cleanup Tasks</h3>
