--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -23,7 +23,7 @@
     
     @Scripts.Render("~/bundles/jqueryval")
     
-    <script src="~/Scripts/jquery.nouislider.full.min.js"></script>
+    <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
     <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
