--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -80,6 +80,7 @@
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
+        <input type="checkbox" name="batch" id="batch" /> <text>Batch Upload</text>
         <input type="submit" name="reloadDatabase" id="Submit" value="Reload" />
         <input type="submit" name="reloadDatabase" id="Reload" value="Update" />
     }
