--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -49,6 +49,7 @@
         <li>@Html.ActionLink("Seed the Datbase", "SeedDatabase")</li>
         <li>@Html.ActionLink("Rerun seed function", "Reseed")</li>
         <li>@Html.ActionLink("Upload Catalog", "UploadCatalog")</li>
+        <li>@Html.ActionLink("Upload Album", "UploadCatalog", new { headers="Title", separator=@"\t" })</li>
     }
 </ul>
 
