--- a/DanceCalc/m4d/Views/Admin/UploadCatalog.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadCatalog.cshtml
@@ -11,6 +11,8 @@
     string header = "TITLE,ARTIST";
     string user = "";
     string dances = "";
+    string album = "";
+    string artist = "";
     
     if (ViewData.ContainsKey("Separator") && !string.IsNullOrWhiteSpace(ViewBag.Separator))
     {
@@ -28,6 +30,14 @@
     {
         dances = ViewBag.Dances;
     }
+    if (ViewData.ContainsKey("Artist") && !string.IsNullOrWhiteSpace(ViewBag.Artist))
+    {
+        artist = ViewBag.Artist;
+    }
+    if (ViewData.ContainsKey("Album") && !string.IsNullOrWhiteSpace(ViewBag.Album))
+    {
+        artist = ViewBag.Album;
+    }
     
     <div class="form-group">
         <span class="control-label">Separator:</span>
@@ -44,6 +54,14 @@
     <div class="form-group">
         <span class="control-label">Dances:</span>
         <input type="text" name="dances" value="@dances"/>
+    </div>
+    <div class="form-group">
+        <span class="control-label">Artist:</span>
+        <input type="text" name="artist" value="@artist" />
+    </div>
+    <div class="form-group">
+        <span class="control-label">Album:</span>
+        <input type="text" name="album" value="@album" />
     </div>
     <div class="form-group">
         <span class="control-label">Table:</span>
