Get some basic tagging working + The code to bulk migrate genre and dances to tags

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -23,7 +23,8 @@
     <li>@Html.ActionLink("Merge Candidates - Similar Title + All else equal", "MergeCandidates", "Song", new { level = 0 }, null)</li>
     <li>@Html.ActionLink("Clean up Tempoes", "CleanTempoes")</li>
     <li>@Html.ActionLink("Fix up Artists", "FixArtists")</li>
-    <li>@Html.ActionLink("UpdateAlbums", "UpdateAlbums")</li>
+    <li>@Html.ActionLink("Update Albums", "UpdateAlbums")</li>
+    <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes")</li>
     <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
 </ul>
 
