--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -122,7 +122,7 @@
             foreach (var item in Model.DanceRatings)
             {
                 @separator;
-            @Html.DisplayFor(model => item.Dance.Info.Name)
+                @Html.DisplayFor(model => item.Dance.Info.Name)
                 if (item.Weight > 1)
                 {
                     <b>(@item.Weight)</b>
@@ -152,6 +152,13 @@
         </div>
         <br />
     }
+    <hr class="row col-md-12" />
+    <div class="editor-label row col-md-12">
+        Tags:
+    </div>
+    <div class="editor-field row col-md-12">
+        @Html.TextBox("editTags", "", new { @class = "form-control" })
+    </div>
 
     <hr class="row col-md-12" />
     <div class="row col-md-12">
