Bug fixes to upload and counter help button

--- a/DanceCalc/m4d/Views/Shared/_Counter.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Counter.cshtml
@@ -6,7 +6,7 @@
     <div class="btn-group col-xs-6">
         @Html.Partial("_MeterChooser")
     </div>
-    <a href="/Home/CounterHelp" class="btn btn-default col-xs-1" role="button"><img src="~/Content/blue-help.png" width="20" height="20" /></a>
+    <a class="btn btn-info col-xs-1" href="/Home/CounterHelp"><span class="glyphicon glyphicon-question-sign"></span></a>
 </div>
 
 @*
