--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: Source Sans Pro;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -98,15 +99,30 @@ table.songlist
     font-size: large;
     font-weight:bold;
     padding: 3px 6px;
-    color: #5bc0de;
+    color: #ef8900;
     background-color: #fff;
-    border-color: #46b8da;
+    border-color: #cc7a00;
     line-height: 1.42857143;
     text-align: center;
     white-space: nowrap;
     vertical-align: middle;
     border: 4px solid;
     border-radius: 3px;
+}
+
+.music
+{
+    color: #24a092;
+}
+
+.tools
+{
+    color: #cc7700;
+}
+
+.blog
+{
+    color: #555555;
 }
 
 #mt
@@ -182,3 +198,6 @@ table.songlist
 .search-text {
     max-width: none;
 }
+
+h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
+
