--- a/DanceCalc/m4d/Views/SongProperty/Index.cshtml
+++ b/DanceCalc/m4d/Views/SongProperty/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PagedList.IPagedList<m4dModels.SongProperty>
 @using PagedList.Mvc;
 
-<link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
+@*<link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />*@
 
 @{
     ViewBag.Title = "Properties";
