--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -99,6 +99,23 @@ table.songlist
     font-size: large;
     font-weight:bold;
     padding: 3px 6px;
+    color: #5bc0de;
+    background-color: #fff;
+    border-color: #46b8da;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 4px solid;
+    border-radius: 3px;
+}
+
+/*.calculator
+{
+    display: inline;
+    font-size: large;
+    font-weight:bold;
+    padding: 3px 6px;
     color: #ef8900;
     background-color: #fff;
     border-color: #cc7a00;
@@ -123,7 +140,7 @@ table.songlist
 .blog
 {
     color: #555555;
-}
+}*/
 
 #mt
 {
@@ -147,9 +164,14 @@ table.songlist
 .navbar-logo {
   float: left;
   height: 50px;
-  padding: 15px, 0px;
+  padding: 0px 30px 0px 0px;
   font-size: 18px;
   line-height: 20px;
+}
+
+.navbar-custom {
+    font-size: 20px;
+    font-weight:500;
 }
 
 .banner {
