--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -8,10 +8,10 @@
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro|Merienda:700' rel='stylesheet' type='text/css'>
     @{
         string theme = "blog";
-        if (ViewData.ContainsKey("Theme"))
-        {
-            theme = ViewBag.Theme;
-        }
+        //if (ViewData.ContainsKey("Theme"))
+        //{
+        //    theme = ViewBag.Theme;
+        //}
         string themeBundle = "~/bundles/" + theme;
     }
     @Styles.Render(themeBundle)
@@ -34,7 +34,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-custom navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
