I believe I now have incremental upload working based on the tail of the properties list, so if it is a new song I just create it, otherwise I do an incremental edit based on the tail.

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -93,9 +93,10 @@
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
-        <input type="checkbox" name="batch" id="batch" /> <text>Batch Upload</text>
-        <input type="submit" name="reloadDatabase" id="Submit" value="Reload" />
-        <input type="submit" name="reloadDatabase" id="Reload" value="Update" />
+        <input type="checkbox" name="batch" id="batch" value="true" /> <text>Batch Upload</text>
+        <input type="submit" name="reloadDatabase" id="Reload" value="Reload" />
+        <input type="submit" name="reloadDatabase" id="Add" value="Add" />
+        <input type="submit" name="reloadDatabase" id="Update" value="Update" />
     }
 }
 
