--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
     </div>
     <div class="col-md-4">
         <h1 class="tools">Tools</h1>        
-        <p class="blog">Did you just hear a really fun song and you would like to figure out what dance will work with that tempo?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
-        <p class="blog">More useful tools for dancers are coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help match dancers to music</a></p>
+        <p class="blog">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
+        <p class="blog">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help music to dances or otherwise help dancers find music.</p>
     </div>
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
