Kludge up the tag editing so that tag types get parsed and added from the context before going down to the song level, not quite sure how I want to handle this in the long term, but this works for now.

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -139,7 +139,7 @@
     }
     <hr class="row col-md-12" />
     <div class="editor-label row col-md-12">
-        Tags:
+        Tags: (@Model.TagSummary)
     </div>
     <div class="editor-field row col-md-12">
         @{
